Make inside design.

--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
             <li><a href = "#">ABOUT US</a></li>
         </ul>
     </div>
+    <div class="entery">
+        <div class="title">
+            <h2>Professional Website Design</h2>
+            <button class = "btm">GO TO MOON</button>
+        </div>
+        <div class="img"><img src = "photos/interface.jpg.png" class = "inter" width="700px"></div>
+    </div>
+    <a class="scroll" href = "#">Scroll To Buttom</a>
 </body>
 </html>
